# advent-of-code

./: .gitignore
year_2021/: pyproject.toml  tox.ini
year_2021/tests/: test_all_days.py
year_2021/year_2021/: day_01.py  day_02.py  day_03.py  day_lib.py
