[tool.poetry]
name = "year_2021"
version = "0.1.0"
description = "Training and Code Test Answers"
authors = ["beerios <chris@harleybrewing.com>"]

[tool.poetry.dependencies]
python = "~3.8"
requests = "^2.24.0"
marshmallow = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.0"
flake8 = "^4.0.0"
wrapt = "^1.12.1"
flake8-junit-report = "^2.1.0"
pytest-cov = "^2.10.1"
docker-compose = "^1.27.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
