[tool.poetry]
name = "year_2021"
version = "0.1.0"
description = "Training and Code Test Answers"
authors = ["beerios <chris@harleybrewing.com>"]

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.31.0"
marshmallow = "^3.20.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pyyaml = "^6.0.1"
pylint = "^2.17.5"
flake8 = "^6.1.0"
wrapt = "^1.15.0"
flake8-junit-report = "^2.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
